# comet-movement

./: .env  .gitignore  Cargo.toml  rustfmt.toml  solar_system_data.json
src/: main.rs  time.rs  views.rs
src/objects/: comet.rs  mod.rs  planet.rs  satellite.rs  stars.rs  sun.rs
src/objects/planets/: earth.rs  jupiter.rs  mars.rs  mercury.rs  mod.rs  neptune.rs  saturn.rs  uranus.rs  venus.rs
src/state/: caches.rs  canvas.rs  config.rs  mod.rs  redraw.rs  settings.rs  system_position.rs  view.rs
src/state/settings/: mod.rs  scale.rs  speed.rs
src/state/space/: comets.rs  mod.rs
src/util/: mod.rs  time.rs
src/util/data/: config_data.rs  mod.rs  solar_system_data.rs
src/util/geometry/: circle.rs  mod.rs  point.rs  vector.rs
src/util/objects/: consts.rs  mod.rs  values.rs
src/util/objects/movement/: mod.rs  trajectory.rs
src/util/physics/: formulas.rs  mod.rs  vector.rs
src/util/physics/quantities/: mod.rs  quantity_units.rs
src/views/: mod.rs  objects.rs
util/: Cargo.toml
util/src/: file_data.rs  lib.rs  time.rs
util/src/data/: config_data.rs  solar_system_data.rs
util/src/geometry/: circle.rs  line.rs  mod.rs  point.rs  vector.rs
util/src/objects/: consts.rs  mod.rs  values.rs
util/src/objects/movement/: mod.rs  trajectory.rs
util/src/physics/: formulas.rs  vector.rs
util/src/physics/quantities/: mod.rs  quantity_units.rs
