[package]
name = "comet-movement"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["advanced", "canvas", "image", "tokio"] }
rand = "0.10"
num-traits = "0.2"
serde_json = "1.0"
gset = "1.1"
tap = "1.0"

serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = true
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
